# chimpsky

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.sh
schema/: a_carried_object.schema.json  bigmessage.schema.json  root_message_format.schema.json
src/: field_definitions.rs  field_kinds.rs  main.rs  object_definitions.rs  random_values.rs  schema_parser.rs
