[package]
name = "chimpsky"
version = "0.1.0"
authors = ["Abhijat Malviya <malviya.abhijat@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
chrono = "0.4"
rand_regex = "0.14"
regex-syntax = "0.6"
regex = "1.3"
uuid = { version = "0.8", features = ["v4"] }
structopt = "0.3"